--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
   },
   "include": [
     "linkedList/**/*.ts",
+    "doubleLL/**/*.ts","stack/**/*.ts","Queue/**/*.ts",
     "util/**/*.ts",
     "main.ts"
   ],
